photos wrapping. need to redo to avoid distinct rows

--- a/app/assets/stylesheets/components/_photos.scss
+++ b/app/assets/stylesheets/components/_photos.scss
@@ -1,14 +1,21 @@
 .gallery {
   max-width: 100%;
-  margin: 20px 15px;
+  margin: 0px 50px;
+}
+
+.clearable-md-4th:nth-child(3n+1) {
+  clear: left;
 }
 
 .photo-holder {
   width: 100%;
   position: relative;
+  margin: 10px 0;
 
   img {
       width: 100%;
+      border: 0.1px solid $gray-lighter;
+      // box-shadow: 0.5 0.5 0.5 rgba(50, 50, 50, 0.75);
   }
 
   .caption {
