--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,15 +1,13 @@
 /* Main class */
 .navbar {
   // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  // background: white;
+  background: white;
   transition: all 0.3s ease;
   // display: flex;
-  height: 70px;
-  padding: 10px 30px 0 30px;
+  height: 120px;
+  padding: 10px 30px 0 70px;
   align-items: center;
   justify-content: space-between;
-  background: white;
-  opacity: 1;
 }
 
 /* Optional class to fix the navbar on top */
@@ -17,7 +15,8 @@
   position: fixed;
   left: 0px;
   top: 0px;
-  z-index: 1;
+  z-index: 10;
+  opacity: 0.9;
   width: 100%;
   color: $gray-darker;
 
